fix(css): Change the flex direction back to horizontal and add a flex wrap. The function container keys and the key containers keys are algined

--- a/js_calculator/styles.css
+++ b/js_calculator/styles.css
@@ -67,7 +67,7 @@
 
 .function-keypad{
     display:flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     width:200px;
     height:500px;
